[package]
name = "wsl_proxy"
description = "A WSL binary Windowsifier, so you can use WSL programs as Windows executables"
version = "0.1.0"
authors = ["Archenoth <archenoth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'