[package]
name = "wsl_proxy"
description = "A WSL binary Windowsifier, so you can use WSL programs as Windows executables"
version = "0.2.0"
authors = ["Archenoth <archenoth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
base64 = "0.11.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'